--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "api": "json-server ./src/services/server.json --host 192.168.0.105 --port 3333 --delay 700"
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.2",
     "@shopify/flash-list": "1.3.1",
+    "@tanstack/react-query": "^4.20.4",
+    "axios": "^1.2.1",
     "expo": "~47.0.8",
     "expo-font": "~11.0.1",
+    "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
+    "moti": "^0.21.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-calendars": "^1.1292.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-web": "~0.18.9"
