--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@shopify/flash-list": "1.3.1",
     "@tanstack/react-query": "^4.20.4",
     "axios": "^1.2.1",
+    "date-fns": "^2.29.3",
     "expo": "~47.0.8",
     "expo-font": "~11.0.1",
     "expo-linear-gradient": "~12.0.1",
@@ -40,6 +41,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "prettier": "^2.8.1",
+    "reactotron-react-native": "^5.0.3",
     "typescript": "^4.6.3"
   },
   "private": true
