--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.2",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
     "@shopify/flash-list": "1.3.1",
     "@tanstack/react-query": "^4.20.4",
     "axios": "^1.2.1",
@@ -24,9 +26,11 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-calendars": "^1.1292.0",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "^4.4.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
