--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
     "expo-font": "~11.0.1",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
+    "formik": "^2.2.9",
     "moti": "^0.21.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-calendars": "^1.1292.0",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-mask-input": "^1.2.2",
     "react-native-reanimated": "~2.12.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9"
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.9",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -45,6 +49,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "prettier": "^2.8.1",
+    "react-native-svg-transformer": "^1.0.0",
     "reactotron-react-native": "^5.0.3",
     "typescript": "^4.6.3"
   },
